// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Action /> with an element icon should render correctly 1`] = `
<div>
  <li
    class="HvAppSwitcherAction-root HvListItem-root HvListItem-gutters HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
    tabindex="-1"
  >
    <a
      class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
      href="http://mockapp1/"
      style="border-color: #414141;"
      tabindex="0"
      target="_top"
    >
      <div
        class="HvAppSwitcherAction-icon"
      >
        <div
          class="HvIconBase-root HvIconBase-s"
          data-testid="tool-icon"
          name="Tool"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M4.79431 14.03412l4.59619-4.5962.49494.07061a3.97211 3.97211 0 003.39415-1.13127 4.01469 4.01469 0 001.03528-3.86371L12.987 5.84145l-.41363.00069h-2.41551V3.42665l.00069-.41363 1.3279-1.32789a4.01606 4.01606 0 00-3.86371 1.03528 3.97211 3.97211 0 00-1.13127 3.39415l.07061.49494-4.5962 4.59619 2.82843 2.82843m0 1.41421L.55167 11.20569l4.94975-4.94975a5.00069 5.00069 0 017.70739-4.879l-2.05054 2.05058v1.41421h1.41421L14.623 2.79119a5.01258 5.01258 0 01-.63632 6.29318 4.96269 4.96269 0 01-4.24264 1.41421z"
              fill="#414141"
            />
          </svg>
        </div>
      </div>
      <span
        class="HvAppSwitcherAction-title HvTypography-root HvTypography-highlightText"
      >
        Mock App 1
      </span>
    </a>
  </li>
</div>
`;

exports[`<Action /> with description should render correctly 1`] = `
<div>
  <li
    class="HvAppSwitcherAction-root HvListItem-root HvListItem-gutters HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
    tabindex="-1"
  >
    <a
      class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
      href="http://mockapp1/"
      style="border-color: #414141;"
      tabindex="0"
      target="_top"
    >
      <div
        class="HvAppSwitcherAction-icon"
      >
        <img
          alt="Mock App 1 Description"
          class="HvAppSwitcherAction-iconUrl"
          src="http://mockapp1/icon"
        />
      </div>
      <span
        class="HvAppSwitcherAction-title HvTypography-root HvTypography-highlightText"
      >
        Mock App 1
      </span>
      <div
        class=""
      >
        <div
          aria-label="Mock App 1 Description"
          class="HvAppSwitcherAction-iconInfo HvIconBase-root HvIconBase-s"
          name="Info"
          role="img"
        >
          <svg
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="color0"
              d="M8 16a8 8 0 118-8 8 8 0 01-8 8zM8 1a6.957 6.957 0 00-7 6.91373Q.99973 7.95687 1 8a6.957 6.957 0 006.91373 7q.04314.00027.08627 0a6.957 6.957 0 007-6.91373Q15.00027 8.04313 15 8a6.957 6.957 0 00-6.91373-7Q8.04313.99973 8 1zm-.5 11h1V6h-1zm0-7h1V4h-1z"
              fill="#414141"
            />
          </svg>
        </div>
      </div>
    </a>
  </li>
</div>
`;

exports[`<Action /> without description should render correctly 1`] = `
<div>
  <li
    class="HvAppSwitcherAction-root HvListItem-root HvListItem-gutters HvListItem-interactive HvFocus-root HvFocus-focusDisabled"
    tabindex="-1"
  >
    <a
      class="HvAppSwitcherAction-typography HvTypography-root HvTypography-normalText"
      href="http://mockapp1/"
      style="border-color: #414141;"
      tabindex="0"
      target="_top"
    >
      <div
        class="HvAppSwitcherAction-icon"
      >
        <img
          class="HvAppSwitcherAction-iconUrl"
          src="http://mockapp1/icon"
        />
      </div>
      <span
        class="HvAppSwitcherAction-title HvTypography-root HvTypography-highlightText"
      >
        Mock App 1
      </span>
    </a>
  </li>
</div>
`;
